# namecase

./: .bumpversion.toml  .gitignore  Brewfile  Brewfile.lock.json  CONTRIBUTING.md  README.md  Taskfile.yml  alacritty.sh  pyproject.toml  tox.ini
.github/: SUPPORT.md
docs/: cases.md
src/: caseutil.py  namecase.py
tests/: test_cli.txt  test_readme.txt  test_simple.txt  test_tokenize.txt
