[tool.poetry]
name = "caseutil"
version = "0.5.3"
description = "Case convert and verify for Python: snake_case, camelCase, kebab-case, and more."
authors = ["Michael Makukha <m.makukha@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/makukha/caseutil"
#documentation = ""  # todo
keywords = [
    "case",
    "convert",
    "case converter",
    "string case",
    "text case",
    "text case converter",
    "naming",
    "camel case",
    "pascal case",
    "snake case",
    "kebab case",
    "all caps",
    "screaming snake case",
]
classifiers = [
    # see https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=2.7,<4,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"

[tool.poetry.group.dev.dependencies]
bump-my-version = {version = "^0.24.3", python = "^3.12"}
genbadge = {version = "^1.1.1", python = "^3.12", extras = ["coverage", "tests"]}
mistletoe = {version = "^1.4.0", python = "^3.12"}
pytest = {version = "^8.3.2", python = "^3.12"}
pytest-cov = {version = "^5.0.0", python = "^3.12"}
typer = {version = "^0.12.3", python = "^3.12"}

[tool.poetry.scripts]
caseutil = 'caseutil:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
